--- a/Sql.Samples/Sql.Samples.csproj
+++ b/Sql.Samples/Sql.Samples.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="6.3.3" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.3" />
   </ItemGroup>
   
 </Project>
